# romajitxted

./: .gitignore  README.md
cppver/: CMakeLists.txt  build.bat
cppver/src/: app.cpp  app.h  crypto.cpp  crypto.h  http.cpp  http.h  llm.cpp  llm.h  main.cpp  resource.h  resource.rc  settings.cpp  settings.h  ui.cpp  ui.h
htmlver/: check.mjs  index.html
winver/: build.ps1  index.html  main.js  package-lock.json  package.json  preload.js
